@@ -62,7 +62,7 @@
 		      <accelerator key="L" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image64">
+			<widget class="GtkImage" id="image70">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-network</property>
 			  <property name="icon_size">1</property>
@@ -140,7 +140,7 @@
 		      <accelerator key="F11" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image65">
+			<widget class="GtkImage" id="image71">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-fullscreen</property>
 			  <property name="icon_size">1</property>
@@ -161,7 +161,7 @@
 		      <accelerator key="F11" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image66">
+			<widget class="GtkImage" id="image72">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-leave-fullscreen</property>
 			  <property name="icon_size">1</property>
@@ -350,9 +350,51 @@
 		<widget class="GtkMenu" id="chess1_menu">
 
 		  <child>
+		    <widget class="GtkImageMenuItem" id="undo_move1">
+		      <property name="label" translatable="yes">_Undo Move</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="_on_undo_move_clicked" last_modification_time="Sat, 06 Oct 2007 13:03:05 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image73">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-undo</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="menu_resign">
+		      <property name="visible">True</property>
+		      <property name="sensitive">True</property>
+		      <property name="label" translatable="yes">_Resign</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="_on_resign_clicked" last_modification_time="Sat, 06 Oct 2007 13:01:50 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image74">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-dialog-warning</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkMenuItem" id="promotion_type1">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Promotion Type</property>
+		      <property name="label" translatable="yes">_Promotion Type</property>
 		      <property name="use_underline">True</property>
 
 		      <child>
@@ -425,7 +467,7 @@
 		      <signal name="activate" handler="_on_help_clicked" last_modification_time="Fri, 11 Aug 2006 12:43:28 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image67">
+			<widget class="GtkImage" id="image75">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -575,14 +617,14 @@
 	  <child>
 	    <widget class="GtkToolButton" id="resign_button">
 	      <property name="visible">True</property>
-	      <property name="sensitive">False</property>
+	      <property name="sensitive">True</property>
 	      <property name="label" translatable="yes">Resign</property>
 	      <property name="use_underline">True</property>
 	      <property name="stock_id">gtk-dialog-warning</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
 	      <property name="is_important">False</property>
-	      <signal name="clicked" handler="_on_resign_button_clicked" last_modification_time="Sun, 15 Jan 2006 18:21:18 GMT"/>
+	      <signal name="clicked" handler="_on_resign_clicked" last_modification_time="Sun, 15 Jan 2006 18:21:18 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="expand">False</property>
