@@ -10,8 +10,20 @@ from defaults import *
 
 class GameHistory:
     
+    def __init__(self):
+        try:
+            os.makedirs(HISTORY_DIR)
+        except OSError, e:
+            if e.errno != errno.EEXIST:
+                print 'Failed to make history directory: %s' % e.strerror
+    
     def getUnfinishedGame(self):
+        """Get the last game that is unfinished.
+        
+        Returns the (PGN game, fileName) or (None, None) if no unfinished games.
+        """
         g = None
+        fileName = None
         try:
             f = file(UNFINISHED_FILE, 'r')
             lines = f.readlines()
@@ -20,9 +32,9 @@ class GameHistory:
             lines.reverse()
             index = 0
             for line in lines:
-                fname = line.strip()
+                fileName = line.strip()
                 try:
-                    p = chess.pgn.PGN(fname, 1)
+                    p = chess.pgn.PGN(fileName, 1)
                 except chess.pgn.Error, e:
                     print e.description
                     continue
@@ -35,8 +47,9 @@ class GameHistory:
                 index += 1
         except IOError, e:
             if e.errno != errno.ENOENT:
+                print e.errno
                 print 'Failed to read unfinished list'
-                return None
+                return (None, None)
             lines = []
         else:
             lines = lines[index:]
@@ -48,9 +61,9 @@ class GameHistory:
             f.writelines(lines)
             f.close()
         except IOError:
-            print 'Failed to read unfinished list'
-            
-        return g
+            print 'Failed to write unfinished list'
+
+        return (g, fileName)
 
     def load(self, date):
         return
@@ -73,30 +86,32 @@ class GameHistory:
 
         # Get a unique name for the file
         count = 0
-        fname = os.path.join(directory, date)
-        while os.path.exists(fname):
+        fileName = os.path.join(directory, date)
+        while os.path.exists(fileName):
             count += 1
-            fname = os.path.join(directory, '%s-%d' % (date, count))
+            fileName = os.path.join(directory, '%s-%d' % (date, count))
         
-        return fname
+        return fileName
     
-    def save(self, g):
+    def save(self, g, fileName):
         """Save a game in the history.
         
         'g' is the game to save
+        'fileName' is the history file to write to or None to create a new one
         """
-        fname = self._getFilename(g)
+        if fileName is None:
+            fileName = self._getFilename(g)
 
         lines = g.getLines()
         try:
-            f = file(fname, 'w')
+            f = file(fileName, 'w')
             for line in lines:
                 f.write(line + '\n')
             f.write('\n')
             f.close()
         except IOError, e:
             # FIXME: This should be in a dialog
-            self.logger.addLine('Unable to autosave to %s: %s' % (fname, str(e)))
+            self.logger.addLine('Unable to autosave to %s: %s' % (fileName, str(e)))
             
         # Update unfinished list
         result = g.getTag(chess.pgn.TAG_RESULT)
@@ -108,11 +123,11 @@ class GameHistory:
             f = file(UNFINISHED_FILE, 'w')
             for line in lines:
                 l = line.strip()
-                if l == fname and result != chess.pgn.RESULT_INCOMPLETE:
+                if l == fileName and result != chess.pgn.RESULT_INCOMPLETE:
                     continue
                 f.write(l + '\n')
             if result == chess.pgn.RESULT_INCOMPLETE:
-                f.write(fname + '\n')
+                f.write(fileName + '\n')
             f.close()
         except IOError:
             print 'Failed to update unfinished list'
