@@ -1,6 +1,8 @@
 2007-10-06  Robert Ancell  <robert.ancell@gmail.com>
 
 	* Merged glchess-ggz branch to give glchess initial ggz support
+	* Removed tab support and added game history support (no UI yet)
+	* Added ability to resign and claim draws
 
 2007-08-12  Andreas Røsdal  <andreasr@gnome.org>
 
